[gd_scene load_steps=19 format=2]

[ext_resource path="res://Stages/Stage1/Sprites/Parts/solar_frontIso.png" type="Texture" id=1]
[ext_resource path="res://Stages/Stage1/Sprites/Parts/solar_back1Iso.png" type="Texture" id=2]
[ext_resource path="res://Stages/Stage1/Sprites/Parts/frame1Iso.png" type="Texture" id=3]
[ext_resource path="res://Stages/Stage1/Sprites/Parts/solar_top_Iso.png" type="Texture" id=4]
[ext_resource path="res://Stages/Stage1/Sprites/assemble_button.png" type="Texture" id=5]
[ext_resource path="res://Stages/Stage1/GlowTween.gd" type="Script" id=6]
[ext_resource path="res://Stages/Stage1/Sprites/assembly_view.png" type="Texture" id=7]
[ext_resource path="res://Stages/Stage1/Sprites/glow.png" type="Texture" id=8]
[ext_resource path="res://Stages/Stage1/Sprites/assembled.png" type="Texture" id=9]
[ext_resource path="res://Fonts/FiraSansBlack60.tres" type="DynamicFont" id=10]
[ext_resource path="res://Fonts/RobotoRegular28.tres" type="DynamicFont" id=11]
[ext_resource path="res://Stages/Stage1/Stage1.gd" type="Script" id=12]
[ext_resource path="res://Stages/Stage1/Scenes/Popup.tscn" type="PackedScene" id=15]
[ext_resource path="res://Stages/Stage1/Scenes/ExplodedView.tscn" type="PackedScene" id=20]
[ext_resource path="res://Stages/Stage1/Scenes/DragManager.tscn" type="PackedScene" id=22]
[ext_resource path="res://Stages/Stage1/Sprites/Parts/solar_bot_Iso.png" type="Texture" id=23]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 391, 176 )

[sub_resource type="StyleBoxEmpty" id=2]

[node name="Level1" type="Node2D"]
script = ExtResource( 12 )

[node name="Table" type="ColorRect" parent="."]
modulate = Color( 0.517647, 0.615686, 0.713726, 1 )
margin_left = 25.0
margin_top = 324.0
margin_right = 895.0
margin_bottom = 895.0

[node name="AssemblyView" type="Sprite" parent="."]
position = Vector2( 470, 197 )
texture = ExtResource( 7 )
__meta__ = {
"_edit_lock_": true
}

[node name="Area2D" type="Area2D" parent="AssemblyView" groups=["zone"]]
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="AssemblyView/Area2D"]
position = Vector2( 0, -8 )
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Satellite" type="Node2D" parent="."]
position = Vector2( 268, 234 )
z_index = 300

[node name="Assembled" type="Sprite" parent="Satellite"]
visible = false
scale = Vector2( 0.126162, 0.126162 )
texture = ExtResource( 9 )

[node name="Sockets" parent="." instance=ExtResource( 20 )]
position = Vector2( 70, 0 )

[node name="FinalAssembly" type="Node2D" parent="."]
position = Vector2( 70, 0 )

[node name="SolarFrontIso" type="Sprite" parent="FinalAssembly"]
position = Vector2( 294, 290 )
z_index = 102
texture = ExtResource( 1 )

[node name="SolarBotIso" type="Sprite" parent="FinalAssembly"]
modulate = Color( 0.776471, 0.776471, 0.776471, 1 )
position = Vector2( 204, 321 )
texture = ExtResource( 23 )

[node name="SolarBack1Iso" type="Sprite" parent="FinalAssembly"]
position = Vector2( 118, 187 )
texture = ExtResource( 2 )

[node name="Frame1Iso2" type="Sprite" parent="FinalAssembly"]
position = Vector2( 204, 94 )
z_index = 100
texture = ExtResource( 3 )

[node name="SolarTopIso" type="Sprite" parent="FinalAssembly"]
position = Vector2( 204, 65 )
z_index = 100
texture = ExtResource( 4 )

[node name="Frame1Iso" type="Sprite" parent="FinalAssembly"]
modulate = Color( 0.776471, 0.776471, 0.776471, 1 )
position = Vector2( 204, 291 )
texture = ExtResource( 3 )

[node name="DragManager" parent="." instance=ExtResource( 22 )]

[node name="AssembleButton" type="Button" parent="."]
visible = false
margin_left = 654.0
margin_top = 291.0
margin_right = 846.0
margin_bottom = 353.0
custom_styles/focus = SubResource( 2 )
icon = ExtResource( 5 )
flat = true
expand_icon = true

[node name="Label" type="Label" parent="AssembleButton"]
margin_left = 11.0
margin_top = 8.0
margin_right = 177.0
margin_bottom = 52.0
custom_fonts/font = ExtResource( 11 )
text = "ASSEMBLE"
align = 1
valign = 1

[node name="Popup" parent="." instance=ExtResource( 15 )]

[node name="GlowTween" type="Tween" parent="."]
repeat = true
playback/repeat = true
script = ExtResource( 6 )

[node name="Glow" type="Sprite" parent="GlowTween"]
visible = false
position = Vector2( 460, 460 )
z_index = 200
texture = ExtResource( 8 )

[node name="WinText" type="Label" parent="."]
visible = false
margin_left = 94.0
margin_top = 553.0
margin_right = 837.0
margin_bottom = 782.0
custom_fonts/font = ExtResource( 10 )
text = "CONGRATS"
align = 1
valign = 1
autowrap = true

[node name="Button" type="Button" parent="WinText"]
margin_left = 235.0
margin_top = 228.0
margin_right = 505.0
margin_bottom = 312.0
custom_fonts/font = ExtResource( 11 )
icon = ExtResource( 5 )
flat = true
expand_icon = true

[node name="Label" type="Label" parent="WinText/Button"]
margin_left = 11.0
margin_top = 9.0
margin_right = 259.0
margin_bottom = 74.0
custom_fonts/font = ExtResource( 11 )
text = "LAUNCH"
align = 1
valign = 1

[connection signal="pressed" from="AssembleButton" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="WinText/Button" to="." method="_on_WinButton_pressed"]
